# alerter

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
migrations/: V1__create_alert_table.sql  V2__create_admin_token_table.sql  V3__create_alerter_token_table.sql  V4__create_alert_registry_table.sql
src/: main.rs
src/alerts/: alerts.rs
src/tokens/: admin_tokens.rs  alerter_tokens.rs  mod.rs
web/: Makefile  index.html
web/css/: grid.css
web/src/: alert_block.js
