[package]
name = "simple_alerts_backend"
version = "0.1.0"
authors = ["John Kordich <jkordich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.4.5", features = ["tls"] }
rocket_contrib = "0.4.5"
rand = "0.7.3"
chrono = { version = "0.4.13", features = ["serde"] }
rusqlite = "0.23.1"
refinery = { version = "0.3", features = ["rusqlite"]}
log = { version = "0.4", features = ["std", "serde"] }
env_logger = { version = "0.7.1"}